CHANGELOG
=========

DarkElements version 4.2 - may 2016
- theme now supports post formats
- file header: updated head section
- added file content-list 
- files archive, index and search: relocated part of loop to separate file
- file index en css: changed featured post notice
- file single: changed .page-title-post into .post-title-single
- changed .sticky into .sticky-title
- several small adjustments

DarkElements version 4.0 - april 2016
- resized all headings (thanks Tom)
- changed address tag display
- several small adjustments

DarkElements version 3.9 - march 2016
- localized mobile menu
- mobile menu now supports 2 level subpages

DarkElements version 3.8 - march 2016
- added file postmeta-single
- file single: relocated postmetadata to separate file
- bugfix in file custom-editor-style: removed tags from reset stylesheet
- seo improvement: blog description is h2 (thanks Tom)
- seo improvement: all page titles are h1 and all post titles are h2 (thanks Tom)
- seo improvement: all widget titles are h3 (thanks Tom)
- file single: changed title class into .page-title-post
- updated readme file to WordPress default
- file style: removed -moz-border-radius because not supported anymore

DarkElements version 3.7 - march 2016
- added file postmeta
- files archive, index, search and single: relocated postmetadata to separate file
- file style and custom-editor-style: updated html tags (thanks Tom)
- updated text strings (thanks Tom)
- several small adjustments

DarkElements version 3.6 - february 2016
- theme customizer: change menu title
- file search: post nav inside the loop
- file style: fixed alignment of next and prev post link
- several small adjustments

DarkElements version 3.4 - january 2016
- file header: removed is_home so homepage content is not displayed when using a static blog page
- several small adjustments

DarkElements version 3.3 - january 2016
- updated file style
- updated file custom-editor-style
- updated file functions
