@@ -6,8 +6,6 @@
 
 <?php get_header(); ?>
 <div id="content">
-	<h1 class="page-title"><?php _e( 'Nothing Found', 'darkelements' ); ?></h1>
-	<p><?php _e('Sorry, no posts matched your criteria.', 'darkelements'); ?></p>
-	<?php get_search_form(); ?>
+	<?php get_template_part( 'content-none' ); ?>
 </div>
 <?php get_footer(); ?>
