@@ -6,11 +6,11 @@
 
 <?php get_header(); ?>
 <div id="content">
-	<?php if (have_posts()) : while (have_posts()) : the_post(); ?>
+	<?php if ( have_posts() ) : ?>
 
-		<?php get_template_part( 'content-list' ); ?>
-
-	<?php endwhile; ?>
+		<?php while ( have_posts() ) : the_post(); ?>
+			<?php get_template_part( 'content-list' ); ?>
+		<?php endwhile; ?>
 
 		<div class="post-nav">
 			<?php next_posts_link(); ?>
@@ -18,8 +18,7 @@
 		</div>
 
 	<?php else: ?>
-		<h1 class="page-title"><?php _e( 'Nothing Found', 'darkelements' ); ?></h1>
-		<p><?php _e('Sorry, no posts matched your criteria.', 'darkelements'); ?></p>
+		<?php get_template_part( 'content-none' ); ?>
 
 	<?php endif; ?>
 </div>
