@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 4.2
+Version: 4.3
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
@@ -312,6 +312,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
+	.format-status .avatar {margin:0.3em 0.5em 0.3em 0;}
 
 	/* SIDEBAR */
 	.widget {padding:5px 0; margin:0 0 5px;}
