@@ -1,6 +1,13 @@
 CHANGELOG
 =========
 
+DarkElements version 4.3 - may 2016
+- added file content-none 
+- files 404, archive, index and search: relocated nothing found to separate file
+- updated file index
+- renamed both postmetadata files
+- several small adjustments
+
 DarkElements version 4.2 - may 2016
 - theme now supports post formats
 - file header: updated head section
